refactor: rebuilt frontend

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -2,5 +2,6 @@
 
 $font-family-base: 'Courier New', courier, monospace;
 $font-family-title: 'Cabin', sans-serif;
-$primary-color-base: #fff;
-$secondary-color-base: #000;
+$font-color-light: #eee;
+$primary-color-dark: #323232;
+$star-wars-yellow: #ff8200;
