feat: integrate and parse data to routes

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,7 +1,8 @@
-@import 'https://fonts.googleapis.com/css2?family=Cabin:ital,wght@1,700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap';
+
 
 $font-family-base: 'Courier New', courier, monospace;
-$font-family-title: 'Cabin', sans-serif;
+$font-family-title: 'Roboto', sans-serif;
 $font-color-light: #eee;
 $primary-color-dark: #323232;
 $star-wars-yellow: #ff8200;
