--- a/frontend/src/components/DropZone/DropZone.module.scss
+++ b/frontend/src/components/DropZone/DropZone.module.scss
@@ -2,28 +2,40 @@
 
 .container {
   width: min(90rem, 100% - 3rem);
-  margin: 5rem auto;
+  margin: $gutter-size auto;
   margin-inline: auto;
   font-family: $font-family-base;
   font-size: clamp(2rem, 10vw, 7rem);
   font-weight: 900;
-  background-color: red;
+  
+  .drop-area {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 30rem;
+    padding: 2rem;
+    margin-inline: auto;
+    cursor: pointer;
+    background-color: gray;
+    border-radius: 5px;
+  }
+
+  .csv-icon {
+    font-size: clamp(5rem, 10vw, 7rem);
+  }
+
+  .drop-area:hover {
+    border: 1.5rem solid black;
+    transition: ease-in, 200ms;
+  }
+
+  .drop-area:focus {
+    border: 1.5rem solid black;
+    transition: ease-in, 200ms;
+  } 
 }
 
-.drop-area {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  align-items: center;
-  justify-content: center;
-  width: min(50rem, 80%);
-  height: 20rem;
-  padding: 2rem;
-  margin-inline: auto;
-  background-color: greenyellow;
-  border-radius: 5px;
-}
-
-.csv-icon {
-  font-size: clamp(5rem, 10vw, 7rem);
-}
