--- a/frontend/src/pages/Importer/Importer.module.scss
+++ b/frontend/src/pages/Importer/Importer.module.scss
@@ -1,3 +1,19 @@
-.font-big {
-  font-size: 5rem;
+@import '../../styles/variables.scss';
+
+.container {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100dvh;
+
+  // polyfill
+  min-height: 100vh;
+  background-color: rgb(218 212 212);
+
+  .title {
+    margin-inline: auto;
+    font-family: $font-family-title;
+    font-size: 5rem;
+  }
 }
