--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -6,3 +6,4 @@ $font-family-title: 'Roboto', sans-serif;
 $font-color-light: #eee;
 $primary-color-dark: #323232;
 $star-wars-yellow: #ff8200;
+$gutter-size: 5rem;
